<resources>
    <string name="app_name" translatable="false">Effective Travel</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="no_account_q">Don\'t have account?</string>
    <string name="action_register">Register</string>
    <string name="transport_stats_title">Transport stats</string>
    <string name="personal_stats_title">Personal stats</string>
    <string name="logout_title">Logout</string>
    <string name="station_title">Station</string>
    <string name="route_type_title">Type</string>
    <string name="route_number_title" translatable="false">№</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_login">Sign in</string>

    <string name="preferences_file_key" translatable="false">com.effectivetravel.client.preferences</string>

    <string name="station_main_title">Select station</string>
    <string name="station_search_title">Search station</string>

    <string name="route_main_title">Select route</string>
    <string name="route_search_title">Search route</string>

    <string name="personal_bus_row_title">Bus:</string>
    <string name="personal_shuttlebus_row_title">Shuttlebus:</string>
    <string name="personal_tram_row_title">Tramway:</string>
    <string name="personal_trolley_row_title">Trolleybus:</string>
    <string name="personal_reset">Reset</string>



    <string name="title_activity_personal_stats">PersonalStatsActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory \n\n\n of a rationalized space and a system of motion."
        "The fundamentals of light, surface, and movement \n\n are key to conveying how objects move, "
        "interact, and exist in space and in relation \n\n\n\n each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="personal_reset_title">Resetting personal stats</string>
    <string name="personal_reset_description">Are you shure you want to reset your stats?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
