<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.et.gui.PersonalStatsActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_from_PS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:layout_gravity="bottom|end" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/personal_stats_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textTitle"
            android:textAppearance="@android:style/TextAppearance.Holo.Large"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:background="@color/colorPrimary" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:padding="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/personal_bus_row_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textBus"
                    android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:text="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textBusCount"
                    android:gravity="center_horizontal"
                    android:textAppearance="@android:style/TextAppearance.Holo.Large" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:background="@color/common_google_signin_btn_text_dark_disabled">

                <TextView
                    android:text="@string/personal_shuttlebus_row_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textShuttle"
                    android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textShuttleCount"
                    android:textAppearance="@android:style/TextAppearance.Holo.Large"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:text="@string/personal_tram_row_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textTram"
                    android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textTramCount"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Holo.Large" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:background="@color/common_google_signin_btn_text_light_disabled">

                <TextView
                    android:text="@string/personal_trolley_row_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textTrolley"
                    android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textTrolleyCount"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Holo.Large" />
            </TableRow>
        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="42dp" />

        <Button
            android:text="@string/personal_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPersonalReset" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
